# cdm-test-rs

./: Cargo.toml  README.md  fix-tests.sh
test-base/: Cargo.toml  build.rs  memory.x  test.toml
test-base/.cargo/: config.toml
test-base/src/: main.rs  test_subst.rs
test-base/std/src/: lib.rs
test-base/test/src/: lib.rs
test-runner/: Cargo.toml
test-runner/src/: cocoemu.rs  compile.rs  main.rs
tests/allocator/: alloc-shrink-oob-read.rs
tests/array-slice-vec/: array_const_index-2.rs  byte-literals.rs  cast-in-array-size.rs  check-static-slice.rs  copy-out-of-array-1.rs  destructure-array-1.rs  empty-mutable-vec.rs  estr-slice.rs  evec-slice.rs  fixed_length_copy.rs  huge-largest-array.rs  infer_array_len.rs  issue-15730.rs  issue-18425.rs  ivec-pass-by-value.rs  mut-vstore-expr.rs  mutability-inherits-through-fixed-length-vec.rs  mutable-alias-vec.rs  nested-vec-1.rs  nested-vec-2.rs  new-style-fixed-length-vec.rs  rcvr-borrowed-to-slice.rs  repeated-vector-syntax.rs  show-boxed-slice.rs  slice.rs  slice_binary_search.rs  slice_is_sorted_by_borrow.rs  subslice-patterns-const-eval-match.rs  subslice-patterns-const-eval.rs  variance-vec-covariant.rs  vec-dst.rs  vec-fixed-length.rs  vec-late-init.rs  vec-macro-no-std.rs  vec-macro-rvalue-scope.rs  vec-macro-with-brackets.rs  vec-macro-with-trailing-comma.rs  vec-matching-autoslice.rs  vec-matching-fixed.rs  vec-matching-fold.rs  (+5 more)
tests/associated-types/: associate-type-bound-normalization.rs  associated-item-long-paths.rs  associated-types-basic.rs  associated-types-binding-in-trait.rs  (+95 more)
(+154 files in other folders)
