[package]
name = "cdm-test"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"

[dependencies.embedded-alloc]
version = "0.7.0"

[dependencies.std]
path = "./std"

[dependencies.test]
path = "./test"

[dependencies.cdm]
git = "https://github.com/aelsi2/cdm-rs.git"
features = ["critical-section"] 

[dependencies.cdm-rt]
git = "https://github.com/aelsi2/cdm-rs.git"
