[package]
name = "test-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = [ "derive" ] }
anyhow = "1.0.102"
tempfile = "3.27.0"
walkdir = "2.5.0"
toml = "1.1.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tungstenite = "0.29.0"
nix = { version = "0.31.3", features = [ "signal" ] }
